--- a/app/core/templates/core/countlist.html
+++ b/app/core/templates/core/countlist.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class='text-center'>
         <h1>Enter Counts Below</h1>
-        <br/><br/> 
+        <br/><br/>
     </div>
     {% if submitted %}
         <a href='/core/countrecords/?page=1'></a>
@@ -33,9 +33,9 @@
                         {% for field in form %}
                             <td>{{ field }}</td>
                         {% endfor %}
-                        <td>
-                            <a href="/core/delete_countrecord/countrecords/">
-                                <button class="btn btn-outline-danger">Discard</button>
+                        <td class="discardButtonCell text-center">
+                            <a href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
+                                Remove
                             </a>
                         </td>
                     </tr>
@@ -45,40 +45,23 @@
         
         
         <div class="text-center">
-            <button type="submit" name="submit" class="btn btn-secondary">Save Counts</button> 
-            <a href="/core/delete_countrecord/countrecords/{{ encoded_list }}">
-                <button class="btn btn-outline-danger">Discard All</button>
-            </a>
+            <button type="submit" name="submit" class="btn btn-secondary">Save Counts</button>
+            <a href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">Discard All</a>
         </div>
+        <div id="encodedListDiv" data-encoded-list="{{ encoded_list }}"></div>
     {% endif %}
-
-    
-
-    <script>
-        $(document).ready(function(){
-            $('input[type="number"]').each(function(){
-                $(this).attr("value", Math.round($(this).attr("value")));
-            });
-        });
-
-        let expected_quantity;
-        let counted_quantity;
-        let variance;
-
-        $('input[id*=counted_quantity]').blur(function(){
-            expected_quantity = $(this).parent().prev('td').children().first().val();
-            console.log("expected qty: " + expected_quantity);
-            counted_quantity = $(this).val();
-            console.log("counted qty: " + counted_quantity);
-            variance = counted_quantity - expected_quantity;
-            console.log("variance: " + variance);
-            $(this).parent().next('td').next('td').children().attr('value', variance);
-        });
-
-        $('input[type=hidden]').each(function() {
-            $(this).parent('td').attr('style', "display:none;");
-        });
-
-    </script>
-
+    <div class="text-center">
+        <h3>Search</h3>
+        <h4>Item number:</h4>
+        <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
+        <br>
+        <h4>Description:</h4>
+        <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        <a id="addCountLink">Add count for this blend</a>
+    </div>
 {% endblock content %}
+
+{% block belowdeckscripts %}
+    <script src="{% static 'core/js/countList.js' %}"></script>
+
+{% endblock %}
