--- a/app/core/templates/core/countlist.html
+++ b/app/core/templates/core/countlist.html
@@ -34,7 +34,7 @@
                             <td>{{ field }}</td>
                         {% endfor %}
                         <td class="discardButtonCell text-center">
-                            <a href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
+                            <a class="discardButton" href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
                                 Remove
                             </a>
                         </td>
@@ -42,26 +42,48 @@
                 {% endfor %}
             </form>
         </div>
-        
-        
-        <div class="text-center">
+        <div class="text-center buttonContainer">
             <button type="submit" name="submit" class="btn btn-secondary">Save Counts</button>
-            <a href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">Discard All</a>
+            <a class="discardButton" href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
+                Delete All
+            </a>
         </div>
+        </br>
         <div id="encodedListDiv" data-encoded-list="{{ encoded_list }}"></div>
     {% endif %}
-    <div class="text-center">
-        <h3>Search</h3>
-        <h4>Item number:</h4>
-        <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
-        <br>
-        <h4>Description:</h4>
-        <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
-        <a id="addCountLink">Add count for this blend</a>
+        <div id="addBlendButtonContainer" class="buttonContainer">
+            <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBlendModal">
+                Add A Blend
+            </button>
+        </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="addBlendModal" tabindex="-1" aria-labelledby="addBlendModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addBlendModalLabel">Add Blend</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div id="searchDivContainer">
+                <div id="searchDiv" class="text-center">
+                    <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
+
+                    <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <a id="addCountLink">
+                    <button type="button" class="btn btn-primary">Add</button>
+                </a>
+            </div>
+        </div>
+        </div>
     </div>
 {% endblock content %}
 
 {% block belowdeckscripts %}
     <script src="{% static 'core/js/countList.js' %}"></script>
-
 {% endblock %}
