--- a/app/core/templates/core/countrecords.html
+++ b/app/core/templates/core/countrecords.html
@@ -7,7 +7,13 @@
     <div class='text-center'>
         <h1>Full Count History</h1>
         <br/><br/>
-        <btn id="create-report" class="btn btn-secondary" style="display:none;">Generate Count Report</btn>
+        <button id="createReportButton" class="btn btn-secondary" style="display:none;">Count Report</button>
+        <button id="batchEditButton" class="btn btn-primary" style="display:none;" data-bs-toggle="modal" data-bs-target="#countRecordsModal">
+            Edit Counts
+        </button>
+        <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#countRecordsModal">
+            Delete Counts
+        </button>
         <br/><br/>
     </div>
         <div class="table-responsive-sm">
@@ -37,12 +43,10 @@
                         <td>{{ item.counted_date|date:"M d, Y" }}</td>
                         <td>{{ item.variance|floatformat:0 }}</td>
                         <td class="text-center">
-                            <a href="/admin/core/countrecord/{{ item.id }}/change/" class="undecorated">
-                                <button type="button" class="btn btn-secondary editBtn">
-                                    Edit
-                                </button>
-                            </a>
-                            <button id="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <button dataItemID="{{ item.id }}" type="button" class="btn btn-secondary editBtn" data-bs-toggle="modal" data-bs-target="#countRecordsModal">
+                                Edit
+                            </button>
+                            <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#countRecordsModal">
                                 Delete
                             </button>
                         </td>
@@ -64,20 +68,20 @@
         
         
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="countRecordsModal" tabindex="-1" aria-labelledby="countRecordsModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Confirm Deletion</h5>
+                    <h5 class="modal-title" id="countRecordsModalLabel">Confirm Deletion</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="countRecordsModalBody">
                     Are you sure you want to delete this record?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <a id="modalButtonLink" href="/core/delete_countrecord/{{ item.id }}">
-                        <button type="button" class="btn btn-outline-danger">Delete</button>
+                        <button type="button" class="btn btn-outline-danger" id="modalButton">Delete</button>
                     </a>
                 </div>
             </div>
