Amend print styling for countlist.

--- a/app/static/core/countlist.css
+++ b/app/static/core/countlist.css
@@ -124,4 +124,8 @@ input[name*='counted_quantity'] {
     tr {
         border: solid 1px black;
     }
+
+    th {
+        color: black;
+    }
 }
