Create a lot number updating module.

--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -21,7 +21,7 @@
 <table id="lotnumandqty">
     <tr>
         <td><h4>Lot Number: {{ this_lot.lot_number }}</h4></td>
-        <td><h4>Blend Quantity: {{ this_lot.quantity }}</h4></td>
+        <td><h4>Blend Quantity: {{ this_lot.lot_quantity }}</h4></td>
     </tr>
 </table>
 <br>
