--- a/app/core/templates/core/reports/lotnumsreport.html
+++ b/app/core/templates/core/reports/lotnumsreport.html
@@ -31,7 +31,7 @@
                         <td>{{ item.part_number }}</td>
                         <td>{{ item.description }}</td>
                         <td>{{ item.lot_number }}</td>
-                        <td>{{ item.quantity }}</td>
+                        <td>{{ item.lot_quantity }}</td>
                         <td>{{ item.date_created|date:"M d, Y" }}</td>
                         {% if user.is_staff %}
                             <td>
