--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class='text-center'>
         <h1>Lot Numbers</h1>
-        <a href="/core/lotnumform">
+        <a href="/core/lotnumform" style="display:none;">
             <button>New Lot Number</button>
         </a>
     </div>
@@ -22,7 +22,7 @@
                     <th scope="col" class='text-center'>Lot Qty</th>
                     <th scope="col" class='text-center'>Date Created</th>
                     <th scope="col" class='text-center'>Line</th>
-                    <th scope="col" class='text-center'>Scheduling</th>
+                    <th scope="col" class='text-center'>Desk</th>
                     <th scope="col" class='text-center'>Run Date</th>
                     <th scope="col" class='text-center'>Qty OH</th>
                     <th scope="col" class='text-center'>Date Entered</th>
@@ -33,22 +33,29 @@
                     <td>{{ item.part_number }}</td>
                     <td>{{ item.description }}</td>
                     <td>{{ item.lot_number }}</td>
-                    <td>{{ item.lot_quantity }}</td>
+                    <td class='text-center'>{{ item.lot_quantity|floatformat:0 }}</td>
                     <td>{{ item.date_created|date:"M d, Y" }}</td>
                     <td>{{ item.line }}</td>
                     <td class='text-center'>
-                        <div class="dropdown">
-                            {{ item.desk|floatformat:0 }}
+                        {{ item.desk|floatformat:0 }}
+                        {% comment %} <div class="dropdown">
+                            
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                 <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk1">Desk 1</a></li>
                                 <li><a class="dropdown-item" href="/core/addlot/{{ item.lot_number }}/{{ item.part_number }}/Desk2">Desk 2</a></li>
                             </ul>
-                        </div>
+                        </div> {% endcomment %}
                     </td>
-                    <td class='text-center'>{{item.run_day}} {{ item.run_date|date:"M d, Y" }}</td>
+                    <td class='text-center'>{{ item.run_day }} {{ item.run_date|date:"M d, Y" }}</td>
                     <td>{{ item.qty_on_hand }}</td>
-                    <td>{{ item.date_entered|date:"M d, Y" }}</td>
+                    <td>
+                        {% if not item.date_entered %}
+                            Not Entered
+                        {% else %}
+                            {{ item.date_entered|date:"M d, Y" }}
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
         </table>
