--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -36,17 +36,44 @@
             {% endfor %}
         </table>
     </div>
+
     <div class='text-center'>
-        <div id="page-links">
-            {% if current_page.has_previous %}
-                <a href="/core/allupcomingproduction/?page={{ current_page.previous_page_number }}">Previous Page</a>
-            {% endif %}
-            {% if current_page.has_next %}
-                <a href="/core/allupcomingproduction/?page={{ current_page.next_page_number }}">Next Page</a>
-            {% endif %}
-            <div>
-                Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
-            </div>
+        <div id="page-links" class='text-center'>
+            <nav aria-label="Page navigation">   
+                <ul class="pagination justify-content-center">
+                    {% if current_page.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">First</span>
+                            </a>
+                        </li>   
+                    {% endif %}
+                    
+                    {% for n in current_page.paginator.page_range %}
+                        {% if current_page.number == n %}
+                            <li class="page-item active">
+                                <span class="page-link">{{ n }}<span class="sr-only"></span></span>
+                            </li>
+                        {% elif n > current_page.number|add:'-3' and n < current_page.number|add:'3' %}
+                            <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                    {% if current_page.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ current_page.paginator.num_pages }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                                <span class="sr-only">Last</span>
+                            </a>
+                        </li>
+                    {% endif %}   
+                </ul> 
+            </nav>
+        </div>
+    </br>
+        <div>
+            Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
         </div>
     </div>
+    
 {% endblock content %}
