--- a/app/core/templates/core/lookuplotnums.html
+++ b/app/core/templates/core/lookuplotnums.html
@@ -22,28 +22,15 @@
         <input type="text" id="id_part_number" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input>
         <br>
         <h4>Description:</h4>
-        <input type="text" id="noreallywtfisit" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
-        <br>
-        <h4>Location:</h4>
-        <div id="whatarethelotnums">Use search fields to display lot numbers for a blend.</div>
-        <div class="table-responsive-sm" hidden=true>
-            <table class="table text-left table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col" class='text-center'>Blend</th>
-                        <th scope="col" class='text-center'>Description</th>
-                        <th scope="col" class='text-center'>Lot_Number</th>
-                        <th scope="col" class='text-center'>Quantity</th>
-                        <th scope="col" class='text-center'>Date Created</th>
-                    </tr>
-                </thead>
-            </table>
-        </div>
+        <input type="text" id="id_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input>
+        </br>
+        </br>
+        <a id="lotNumSearchLink"><button class="btn btn-secondary">Find Lot Numbers</button></a>
         <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
     </div>
-
-  {% endblock content %}
+{% endblock content %}
 <!-- End Body -->
+
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/descriptionLookup.js' %}"></script>
+    <script src="{% static 'core/js/lotNumLookup.js' %}"></script>
 {% endblock %}
