--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,8 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                       <li><a class="dropdown-item" href="/prodverse/lookupitem/">Item Quantity</a></li>
                                       <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
+                                      <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
+                                      
                                       <!-- NEED TO BUILD LOT NUM LOOKUP PAGE 
                                         <li><a class="dropdown-item" href="/core/upcomingcounts">Blend Batches</a></li>
                                         !-->
