--- a/app/prodverse/templates/prodverse/excelinline.html
+++ b/app/prodverse/templates/prodverse/excelinline.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <!-- Header Blocks -->
-{% block title %}<title>Lookup Item</title>{% endblock %}
+{% block title %}<title> </title>{% endblock %}
 
 {% block scripts %} 
     <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
@@ -12,45 +12,13 @@
 
 <!-- Body Blocks -->
 {% block content %} 
-    <style>
-        body {
-            margin-top: 6rem;
-            margin-left: 2rem;
-        }
-        
-        h2 {
-            margin-top:12px; 
-            margin-bottom:-2px; 
-            font-size:18px;
-        }
-
-        .ui-autocomplete {
-            max-height: 200px;
-            overflow-y: auto;
-            /* prevent horizontal scrollbar */
-            overflow-x: hidden;
-            /* add padding to account for vertical scrollbar */
-            padding-right: 20px;
-        }
-
-        .loading {
-            background-image: url("{% static 'core/media/loading-gif.gif' %}");
-            background-repeat: no-repeat;
-            background-size: 20px 20px;
-        }
-    </style>
-    <div>
-        <h1>Lookup Item Info</h1>
-        <h2>Item number:</h2>
-        <input type="text" id="id_part_number" placeholder="Search by Item Number" style="width:300px;" enterkeyhint="search"></input>
-        
-        <h2>Description:</h2>
-        <input type="text" id="id_description" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
-
-        <h2>Qty On Hand:</h2>
-        <div id="id_quantity"><em>Use search fields to display qty on hand.</em></div>
-        <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
-    </div>
+<style>
+    iframe {
+        position: relative;
+        top: -60px;
+    }
+</style>
+<iframe frameborder="0" allowfullscreen width="1660" height="1080" src="https://adminkinpak.sharepoint.com/:x:/r/sites/PDTN/_layouts/15/Doc.aspx?sourcedoc=%7B53E2F379-215A-4CAD-B3B3-4E36EF3A68E7%7D&file=Starbrite%20KPK%20production%20schedule.xlsb&action=embedview&ActiveCell=%27INLINE%27%21C6&wdHideSheetTabs"></iframe>
   {% endblock content %}
 <!-- End Body -->
 {% block belowdeckscripts %}
