Add alert for unentered counts & configure keypresses.

--- a/app/core/static/core/countlist.css
+++ b/app/core/static/core/countlist.css
@@ -96,7 +96,9 @@ input[name*='counted_quantity'] {
     align-items: center;
 }
 
-
+.missingCount { 
+    background: lightcoral;
+}
 
 
 @media print {
