--- a/app/core/templates/core/countlist.html
+++ b/app/core/templates/core/countlist.html
@@ -43,7 +43,7 @@
             </form>
         </div>
         <div class="text-center buttonContainer">
-            <button type="submit" name="submit" class="btn btn-secondary">Save Counts</button>
+            <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save Counts</button>
             <a class="discardButton" href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
                 Delete All
             </a>
