Refine lotnumber lookup page and functions.

--- a/app/core/templates/core/countlist.html
+++ b/app/core/templates/core/countlist.html
@@ -35,7 +35,7 @@
                         {% endfor %}
                         <td class="discardButtonCell text-center">
                             <a class="discardButton" href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
-                                Remove
+                                Delete
                             </a>
                         </td>
                     </tr>
