Update the lotnum lookup js and views.py logic.

--- a/app/core/templates/core/lookuplotnums.html
+++ b/app/core/templates/core/lookuplotnums.html
@@ -28,7 +28,7 @@
         </br>
         <a id="lotNumSearchLink"><button class="btn btn-secondary">Find Lot Numbers</button></a>
         <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
-        <p id="warningParagraph"></p>
+        <p id="warningParagraph" style="display: none;"><em>Incomplete or invalid search term.</em></p>
     </div>
 {% endblock content %}
 <!-- End Body -->
