--- a/app/prodverse/templates/prodverse/lookupitemqty.html
+++ b/app/prodverse/templates/prodverse/lookupitemqty.html
@@ -48,11 +48,12 @@
         <input type="text" id="id_description" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
 
         <h2>Qty On Hand:</h2>
-        <div id="id_quantity"><em>Use search fields to display qty on hand.</em></div>
+        <div id="item_quantity"><em>Use search fields to display qty on hand.</em></div>
         <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
+        <p id="warningParagraph" style="display: none;"><em>Incomplete or invalid search term.</em></p>
     </div>
   {% endblock content %}
 <!-- End Body -->
 {% block belowdeckscripts %}
-    <script src="{% static 'prodverse/js/itemLookup.js' %}"></script>
+    <script src="{% static 'prodverse/js/itemQtyLookup.js' %}"></script>
 {% endblock %}
