--- a/app/core/templates/core/modals/addlotnummodal.html
+++ b/app/core/templates/core/modals/addlotnummodal.html
@@ -1,11 +1,11 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'core/lotNumModal.css' %}">
  
-<div class="modal fade" id="editLotNumModal" tabindex="-1" aria-labelledby="editLotNumModalLabel" aria-hidden="true">
+<div class="modal fade" id="addLotNumModal" tabindex="-1" aria-labelledby="addLotNumModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title" id="editLotNumModalLabel"><b>New Lot Number</b></h4>
+            <h4 class="modal-title" id="addLotNumModalLabel"><b>New Lot Number</b></h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div id="newLotNumFormContainer">
