--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -12,12 +12,8 @@
 
 <!-- Body Blocks -->
 {% block content %}
-    <style>
-        body {margin-top: 6rem; margin-left: 4rem;}
-        
-    </style>
     <div>
-        <img src="{% static 'core/media/loading-gif.gif' %}" ></img>
+        {{ testform }}
     </div>
   {% endblock content %}
 <!-- End Body -->
