--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -1,23 +1,31 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block scripts %} <link rel="stylesheet" type="text/css" href="{% static 'core/lotNumRecords.css' %}">{% endblock%}
+{% block scripts %} 
+    <link rel="stylesheet" type="text/css" href="{% static 'core/lotNumRecords.css' %}">
+{% endblock%}
 {% block title %}<title>Lot Numbers</title>{% endblock %}
 
 
 {% block content %}
     <div class='text-center'>
         <h1>Lot Numbers</h1>
-        <button id="editLotNumButton" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editLotNumModal">
+        <button id="addLotNumButton" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addLotNumModal">
             Add New Lot
+        </button>
+        <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#lotNumConfirmModal">
+            Delete Counts
         </button>
     </div>
     
-    {% include 'core/modals/editlotnummodal.html' %}
+    {% include 'core/modals/addlotnummodal.html' %}
+    {% include 'core/modals/lotnumconfirmmodal.html' %}
+
     <br/><br/>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
+                    <th scope="col" class='text-center'></th>
                     <th scope="col" class='text-center'>Blend</th>
                     <th scope="col" class='text-center'>Description</th>
                     <th scope="col" class='text-center'>Lot Number</th>
@@ -28,10 +36,14 @@
                     <th scope="col" class='text-center'>Run Date</th>
                     <th scope="col" class='text-center'>Qty OH</th>
                     <th scope="col" class='text-center'>Date Entered</th>
+                    <th scope="col" class='text-center'></th>
                 </tr>
             </thead>
             {% for item in current_page.object_list %}
                 <tr class="{{item.line}}Row">
+                    <td class='text-center'>
+                        <input type="checkbox" name={{ item.id }} class="rowCheckBox"></input>
+                    </td>
                     <td>{{ item.part_number }}</td>
                     <td>{{ item.description }}</td>
                     <td>{{ item.lot_number }}</td>
@@ -57,6 +69,11 @@
                         {% else %}
                             {{ item.date_entered|date:"M d, Y" }}
                         {% endif %}
+                    </td>
+                    <td>
+                        <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#lotNumConfirmModal">
+                            Delete
+                        </button>
                     </td>
                 </tr>
             {% endfor %}
@@ -103,3 +120,8 @@
     </div>
 
 {% endblock content %}
+
+
+{% block belowdeckscripts %}
+    <script src="{% static 'core/js/lotNumRecordUI.js' %}"></script>
+{% endblock %}
