--- a/app/static/core/countlist.css
+++ b/app/static/core/countlist.css
@@ -13,7 +13,7 @@ input[name*='part_description'] {
 }
 
 input[name*='expected_quantity'] {
-    width: 48px;
+    width: 84px;
     height: 24px;
     background-color: transparent;
     border: none;
@@ -31,7 +31,7 @@ td {
 }
 
 input[name*='variance'] {
-    width: 54px;
+    width: 84px;
     height: 24px;
     background-color: transparent;
     border: none;
@@ -96,7 +96,9 @@ input[name*='counted_quantity'] {
     align-items: center;
 }
 
-
+.missingCount { 
+    background: lightcoral;
+}
 
 
 @media print {
@@ -123,9 +125,5 @@ input[name*='counted_quantity'] {
 
     tr {
         border: solid 1px black;
-    }
-
-    th {
-        color: black;
     }
 }
