Resolve countList rounding & validation issues.

--- a/app/core/templates/core/countlist.html
+++ b/app/core/templates/core/countlist.html
@@ -32,9 +32,9 @@
                     <tr>
                         {% for field in form %}
                             {% if field.name == "variance" %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}</td>
+                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
                             {% else %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">{{ field }}</td>
+                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">{{ field }}{{ field.errors }}</td>
                             {% endif %}
                         {% endfor %}
                         <td class="discardButtonCell text-center">
